k8s/portfolio/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: stefansportfolio
spec:
  selector:
    app: portfolio
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31057
  type: NodePort
